--- a/clients/templates/editCompany.html
+++ b/clients/templates/editCompany.html
@@ -1,6 +1,5 @@
 {% extends 'main.html' %}
 {% load staticfiles %}
-
 {% block events %}
 <style>
 
@@ -53,46 +52,30 @@ h1 {
 }
 
 </style>
-
-<form action="/clients/edit/{{ id }}/" method="post">
+<form action="/clients/editCompany/{{ id }}/" method="post">
     {% csrf_token %}
     <div class='brd'>
     <b>Название:</b>
     <br>
-    {{ form.company }}
+    {{ form.company_name }}
     </div>
-    <br>
     <div class='brd'>
-    <b>Услуга:</b>
+    <b>Почта:</b>
     <br>
-    {{ form.service }}
+    {{ form.email }}
     </div>
-    <br>
     <div class='brd'>
-    <b>Дата истечения:</b>
+    <b>Телефон:</b>
     <br>
-    {{ form.date_of_exp }}
+    {{ form.phone }}
     </div>
-    <br>
-    <br>
-    <br>
     <div class='brd'>
-    <b>Количество:</b>
     <br>
-    {{ form.qty }}
-    </div>
-    <div class = 'brd'>
-    <b>Цена:</b>
-    <br>
-
-    {{ form.price }}
-    </div>
-    <br>
-    <div class='brd'>
     <input type="submit" value="Подтвердить" />
+    </div>
   </div>
 </form>
-
+{% endblock %}
 <link href = "https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css"
          rel = "stylesheet">
 <link href = "https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css"
@@ -102,15 +85,3 @@ h1 {
   src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"
   integrity="sha256-0YPKAwZP7Mp3ALMRVB2i8GXeEndvCq3eSl/WsAl1Ryk="
   crossorigin="anonymous"></script>
-<script>
-  $(function() {
-    $( ".datepicker" ).datepicker({
-      changeMonth: true,
-      changeYear: true,
-      yearRange: "2012:2045",
-      dateFormat: 'yy-mm-dd'
-      // You can put more options here.
-    });
-  });
-  </script>
-{% endblock %}
