--- a/clients/templates/menu.html
+++ b/clients/templates/menu.html
@@ -1,55 +1,1 @@
-{% load static %}
-
-<head>
-    <base href="/">
-    <link rel="stylesheet" href="https://github.com/DenBruk/est_crm/blob/master/clients/static/menu.css">
- 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="https://kryogenix.org/code/browser/sorttable/sorttable.js"></script>
-</head>
-
-
-<style>
-
-
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-}
-
-li a {
-    display: block;
-    color: #000;
-    padding: 10px 16px;
-    border:5px;
-}
-
-/* Change the link color on hover */
-li a:hover {
-    background-color: #555;
-    color: white;
-}
-
-#menu {
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    align-items: center;
-    width: 10em;
-}
-</style>
-
-<div id="menu">
-    <ul>
-        <li><a href="/clients/showAll/">Показать всех клиентов</a></li>
-        <li><a href="/admin/clients/">Добавить</a></li>
-         <br>
-    </ul>
-</div>
+{% extends 'main.html' %}
